finish refactoring user-service
