# internal/handlers/confirm.go
@@ -5,20 +5,16 @@ import (
 	"net/http"
 )
 
-type CodeRequestBody struct {
-	Code string `json:"code" example:"012345" validate:"required,min=6,max=6"`
-}
-
 // Confirm godoc
 // @Summary confirm registration/reset password with 6-digit code from email/sms
 // @Tags auth
 // @Accept  json
 // @Produce application/json
-// @Param code body CodeRequestBody true "raw request body"
-// @Success 200 {object} Response
-// @Failure 400 {object} ErrorResponse
-// @Failure 422 {object} ErrorResponse
-// @Failure 500 {object} ErrorResponse
+// @Param code body handlers.CodeRequestBody true "raw request body"
+// @Success 200 {object} handlers.Response
+// @Failure 400 {object} handlers.ErrorResponse
+// @Failure 422 {object} handlers.ErrorResponse
+// @Failure 500 {object} handlers.ErrorResponse
 // @Router /v1/confirm [post]
 func (h *BaseHandler) Confirm(c echo.Context) error {
 	var requestPayload CodeRequestBody
@@ -35,6 +31,5 @@ func (h *BaseHandler) Confirm(c echo.Context) error {
 	if err := h.userService.Confirm(code); err != nil {
 		return h.ErrorResponse(c, http.StatusInternalServerError, "could not confirm user", err)
 	}
-
 	return h.SuccessResponse(c, http.StatusOK, "code was successfully confirmed", nil)
 }
